flask-pronsearch-web/flask-pronsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-pronsearch-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-pronsearch-web
  template:
    metadata:
      labels:
        app: flask-pronsearch-web
    spec:
      containers:
      - name: flask-pronsearch-web
        image: wolihi/flask-pronsearch-web:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7788
