flask-pronsearch-web/pronsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pronsearch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pronsearch
  template:
    metadata:
      labels:
        app: pronsearch
    spec:
      containers:
      - name: pronsearch
        image: wolihi/pronsearch:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7788
