flask-pronsearch-web/flask-pronsearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-pronsearch-web-svc
  namespace: default
spec:
  ports:
  - name: port
    port: 7788
    protocol: TCP
    targetPort: 7788
  selector:
    app: flask-pronsearch-web
  #type: NodePort
